[gd_scene load_steps=20 format=3 uid="uid://c17oovi60ui5f"]

[ext_resource type="Script" path="res://scenes/npc/ratzwel.gd" id="1_ea0kh"]
[ext_resource type="Texture2D" uid="uid://s833tbnst3ma" path="res://art/characters/player/player_idle-Sheet.png" id="2_j3r7n"]
[ext_resource type="Texture2D" uid="uid://wa4sq8keuhgh" path="res://scenes/player/player_walk.png" id="3_xe60t"]
[ext_resource type="Script" path="res://script/finite_state_machine.gd" id="4_yvgmy"]
[ext_resource type="Script" path="res://scenes/npc/enemy_wander_state.gd" id="5_anree"]
[ext_resource type="Script" path="res://scenes/npc/enemy_chase_state.gd" id="6_ia3xw"]
[ext_resource type="Script" path="res://scenes/npc/enemy_idle_state.gd" id="7_sruyn"]
[ext_resource type="Script" path="res://scenes/npc/enemy_static_follow_state.gd" id="8_yxvub"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fim7m"]
atlas = ExtResource("2_j3r7n")
region = Rect2(0, 0, 15, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6tor"]
atlas = ExtResource("2_j3r7n")
region = Rect2(15, 0, 15, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_auugc"]
atlas = ExtResource("2_j3r7n")
region = Rect2(30, 0, 15, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_41fdm"]
atlas = ExtResource("2_j3r7n")
region = Rect2(45, 0, 15, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfvbm"]
atlas = ExtResource("2_j3r7n")
region = Rect2(60, 0, 15, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o0i5"]
atlas = ExtResource("3_xe60t")
region = Rect2(0, 0, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x3l1"]
atlas = ExtResource("3_xe60t")
region = Rect2(16, 0, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0tmy"]
atlas = ExtResource("3_xe60t")
region = Rect2(32, 0, 16, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cf7n"]
atlas = ExtResource("3_xe60t")
region = Rect2(48, 0, 16, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_t3ewq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fim7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6tor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auugc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41fdm")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_yfvbm")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o0i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x3l1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0tmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cf7n")
}],
"loop": true,
"name": &"walk",
"speed": 9.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ighp0"]

[node name="PlayerNpc" type="CharacterBody2D"]
collision_layer = 65
collision_mask = 0
script = ExtResource("1_ea0kh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t3ewq")
animation = &"idle"
flip_h = true

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("4_yvgmy")
state = NodePath("EnemyIdleState")

[node name="EnemyWanderState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "vision_cast")]
script = ExtResource("5_anree")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
vision_cast = NodePath("../../RayCast2D")

[node name="EnemyChaseState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "vision_cast")]
script = ExtResource("6_ia3xw")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
vision_cast = NodePath("../../RayCast2D")

[node name="EnemyIdleState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "vision_cast")]
script = ExtResource("7_sruyn")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
vision_cast = NodePath("../../RayCast2D")

[node name="EnemyStaticFollowState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator") groups=["npc_ratzwel"]]
script = ExtResource("8_yxvub")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ighp0")

[node name="Label" type="Label" parent="."]
offset_left = -19.0
offset_top = 15.0
offset_right = 21.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1
